object: Correct assertion about toggle up/down on unref

It's normal and possible for there to be *both* a TOGGLE_UP and a
TOGGLE_DOWN queued.  In that case, they would cancel, and we'd be in a
correct state.

This was consistently triggering in the ostree gjs-based
test-sysroot.js.

https://bugzilla.gnome.org/show_bug.cgi?id=724060